# community_test

./: Makefile  README.md
.github/workflows/: build_fw.yml  sonar_scan.yml
projects/bluetooth/bluetooth_applications/bt_soc_empty/: .cproject  .projectlinkstore  app.c  bt_soc_empty.pintool  bt_soc_empty.slcp  bt_soc_empty.slps
projects/bluetooth/bluetooth_applications/bt_soc_empty/autogen/: gen.properties  linkerfile.icf  sl_component_catalog.h  sl_event_handler.c
projects/bluetooth/bluetooth_applications/bt_soc_empty/autogen/.slc_state/: .crc_config.crc
projects/bluetooth/bluetooth_applications/bt_soc_empty/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
projects/bluetooth/bluetooth_applications/bt_soc_empty/bt_soc_empty_cmake/: CMakePresets.json  bt_soc_empty.cmake  toolchain.cmake
projects/bluetooth/bluetooth_applications/bt_soc_empty/bt_soc_empty_iar_cmake/: CMakeLists.txt  bt_soc_empty.cmake  toolchain.cmake
projects/bluetooth/bluetooth_applications/bt_soc_empty/config/: pin_config.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/app/bluetooth/common/in_place_ota_dfu/: sl_bt_in_place_ota_dfu.c
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/platform/driver/gpio/inc/: sl_gpio.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/platform/peripheral/inc/: sl_hal_gpio.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/platform/peripheral/src/: sl_hal_system.c
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/platform/radio/rail_lib/common/: rail.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/platform/service/mpu/src/: sl_mpu.c
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/protocol/bluetooth/inc/: sl_bt_version.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/simplicity_sdk_2024.12.2/protocol/bluetooth/src/: sl_bt_stack_init.c  sli_bt_host_adaptation.c
scripts/: Makefile  gen_sonar_api_report.py  pre_build.py
(+10 files in other folders)
